[gd_scene load_steps=34 format=3 uid="uid://bpnv0fs1eehsp"]

[ext_resource type="Script" path="res://Enemies/enemy_general.gd" id="1_ocdql"]
[ext_resource type="PackedScene" uid="uid://cxf0o1vwjahvw" path="res://Collectibles/collectibleCheese.tscn" id="2_76pom"]
[ext_resource type="PackedScene" uid="uid://bpusy523xij41" path="res://player_projectileSecondary_bouncingBall.tscn" id="3_3teks"]
[ext_resource type="Texture2D" uid="uid://cl8xfsbne5s2v" path="res://Assets/Graphics/sprites/sprites_enemies_alt.png" id="4_jaq6s"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="5_76g8l"]
[ext_resource type="AudioStream" uid="uid://c540h7dwrtb25" path="res://Assets/Sounds/sfx/frog_damage.wav" id="6_shhi8"]
[ext_resource type="Texture2D" uid="uid://cucfqwon2o1x3" path="res://Assets/Graphics/bg_empty_a.png" id="6_toexw"]
[ext_resource type="AudioStream" uid="uid://cy2j1txps8t0w" path="res://Assets/Sounds/sfx/chicken_death.wav" id="7_vuw04"]
[ext_resource type="AudioStream" uid="uid://c6esa6bpc6d6r" path="res://Assets/Sounds/sfx/effect_jump.wav" id="8_otsdg"]
[ext_resource type="AudioStream" uid="uid://c6iipfrjpw3bf" path="res://Assets/Sounds/sfx/effect_death.wav" id="9_us0cl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8374m"]
atlas = ExtResource("4_jaq6s")
region = Rect2(384, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsu13"]
atlas = ExtResource("4_jaq6s")
region = Rect2(448, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5oln"]
atlas = ExtResource("5_76g8l")
region = Rect2(74, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqy6g"]
atlas = ExtResource("5_76g8l")
region = Rect2(518, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_54nfh"]
atlas = ExtResource("5_76g8l")
region = Rect2(592, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_juy3x"]
atlas = ExtResource("4_jaq6s")
region = Rect2(320, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fnpm"]
atlas = ExtResource("4_jaq6s")
region = Rect2(384, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n55j"]
atlas = ExtResource("6_toexw")
region = Rect2(480, 215, 480, 215)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwno5"]
atlas = ExtResource("5_76g8l")
region = Rect2(1281, 1012, 148, 136)

[sub_resource type="AtlasTexture" id="AtlasTexture_8njuh"]
atlas = ExtResource("5_76g8l")
region = Rect2(0, 101, 74, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kdkm"]
atlas = ExtResource("5_76g8l")
region = Rect2(74, 101, 74, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl3gl"]
atlas = ExtResource("4_jaq6s")
region = Rect2(0, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vic5i"]
atlas = ExtResource("4_jaq6s")
region = Rect2(64, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3f58"]
atlas = ExtResource("4_jaq6s")
region = Rect2(256, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qguhu"]
atlas = ExtResource("4_jaq6s")
region = Rect2(192, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78ic6"]
atlas = ExtResource("4_jaq6s")
region = Rect2(128, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4utg"]
atlas = ExtResource("4_jaq6s")
region = Rect2(256, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0h54"]
atlas = ExtResource("4_jaq6s")
region = Rect2(192, 1088, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jkbw"]
atlas = ExtResource("4_jaq6s")
region = Rect2(128, 1088, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kfft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8374m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsu13")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5oln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqy6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54nfh")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juy3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fnpm")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n55j")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwno5")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8njuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kdkm")
}],
"loop": true,
"name": &"flying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl3gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vic5i")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3f58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qguhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78ic6")
}],
"loop": false,
"name": &"jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4utg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0h54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jkbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0h54")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(32, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(48, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h4lu"]
size = Vector2(640, 384)

[node name="enemyFrogBlue" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
position = Vector2(0, -32)
collision_layer = 0
floor_max_angle = 0.523599
floor_snap_length = 15.0
script = ExtResource("1_ocdql")
SPEED = 100
JUMP_VELOCITY = -500.0
movementType = "normal"
turnOnWall = true
onDeath_spawnObject_objectPath = ExtResource("2_76pom")
onDeath_spawnObject_objectAmount = 5
afterDelay_jumpAndMove = true
afterDelay_jumpAndMove_timerID = 1
enemyHp = 2
scene_shootProjectile = ExtResource("3_3teks")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7kfft")
animation = &"damage"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_4klqh")

[node name="patrolDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="followDelay" type="Timer" parent="patrolDirectionTimer"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="jumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_7kt5p")

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_shhi8")

[node name="dropProjectile" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vuw04")

[node name="shootProjectile" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_otsdg")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_us0cl")
volume_db = 10.0
pitch_scale = 0.8

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[node name="scanForPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="scanForPlayer_CollisionShape2D" type="CollisionShape2D" parent="scanForPlayer"]
unique_name_in_owner = true
position = Vector2(320, 0)
shape = SubResource("RectangleShape2D_2h4lu")

[node name="ColorRect" type="ColorRect" parent="scanForPlayer/scanForPlayer_CollisionShape2D"]
visible = false
modulate = Color(1, 0, 0, 0.345098)
offset_left = -320.0
offset_top = -4.0
offset_right = 320.0
offset_bottom = 4.0

[node name="shoot_delay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="Limit_turn" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[node name="scanForLedge" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 0)
target_position = Vector2(0, 112)

[node name="ColorRect" type="ColorRect" parent="scanForLedge"]
visible = false
modulate = Color(1, 0, 0, 0.345098)
offset_right = 4.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "test"

[node name="timerGeneral1" type="Timer" parent="."]
wait_time = 3.0

[node name="timerGeneral2" type="Timer" parent="."]
wait_time = 3.0

[node name="timerGeneral3" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="patrolDirectionTimer" to="." method="_on_patrol_direction_timer_timeout"]
[connection signal="timeout" from="patrolDirectionTimer/followDelay" to="." method="_on_follow_delay_timeout"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="area_entered" from="scanForPlayer" to="." method="_on_scan_for_player_area_entered"]
[connection signal="area_exited" from="scanForPlayer" to="." method="_on_scan_for_player_area_exited"]
[connection signal="timeout" from="shoot_delay" to="." method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="Limit_turn" to="." method="_on_limit_turn_timeout"]
[connection signal="timeout" from="timerGeneral1" to="." method="_on_timer_general_1_timeout"]
[connection signal="timeout" from="timerGeneral2" to="." method="_on_timer_general_2_timeout"]
[connection signal="timeout" from="timerGeneral3" to="." method="_on_timer_general_3_timeout"]
